[package]
name = "deterministic_automata"
version = "0.1.8"
authors = ["Kazuya Haine <kazuyahaine@icloud.com>"]
edition = "2024"
description = "A framework for implementing deterministic and mutation automata with arbitrary state complexity"
license = "MIT"
repository = "https://github.com/HaineSensei/deterministic_automata"
documentation = "https://docs.rs/deterministic_automata"
readme = "README.md"
keywords = ["automata", "state-machine", "parser", "regex", "language"]
categories = ["algorithms", "parsing"]
